Fixed an error where the more post button was linking to the current user instead of the user being visited. added truncation via javascript for posts. all posts added after page load are properly setup via javascript. plus other little fixes...

--- a/app/webroot/css/new/common/wall_input.css
+++ b/app/webroot/css/new/common/wall_input.css
@@ -20,6 +20,7 @@
 	color: #000;
 	border: 1px solid #aaa;
 	width: 438px;
+	max-height: 250px;
 	resize: none;
 	font-family: helvetica, Arial, sans-serif;
 	font-size: 1.6em;
